[metadata]
name = mover
version = 1.0
description = Hey please don''t let my mac go asleep
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uryyakir/all-repos-readme
author = Uri Yakir
author_email = uryyakir@gmail.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    all-repos-add-readme=all_repos_add_readme.main:main
