[metadata]
name = mover
version = 1.0
description = Hey please don''t let my mac go asleep
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uryyakir/mover
author = Uri Yakir
author_email = uryyakir@gmail.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    mover=mover.main:main

[mypy]
exclude = venv/
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[flake8]
exclude = venv\
ignore = E501
